--- a/static/index.html
+++ b/static/index.html
@@ -1,10 +1,93 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
-    <title>Blog</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Blog</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css" >
+  <link rel="stylesheet" href="../static/css/me.css" th:href="@{/css/me.scc}" >
+
 </head>
 <body>
+<!--    navigation   -->
+<nav class="ui inverted attached segment m-padding-tb-mini">
+  <div class="ui container">
+    <div class="ui inverted secondary menu">
+      <h2 class="ui teal header item">Blog</h2>
+      <a href="#" class=" item"><i class="mini home icon"></i>Home</a>
+      <a href="#" class=" item"><i class="mini idea icon"></i>Types</a>
+      <a href="#" class=" item"><i class="mini tags icon"></i>Tags</a>
+      <a href="#" class=" item"><i class="mini info icon"></i>About Me</a>
+      <div class="right item">
+        <div class="ui icon inverted transparent input">
+          <input type="text" placeholder="Search...">
+          <i class="search link icon"></i>
+        </div>
+      </div>
+    </div>
+  </div>
+</nav>
 
+<!--    Content    -->
+<div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+
+</div>
+
+
+<!--   footer  -->
+<footer class="ui inverted vertical segment m-padded-tb-massive">
+  <div class="ui center aligned container">
+    <div class="ui inverted divided stackable grid">
+      <div class="three wide column">
+        <div class="ui inverted link list">
+          <div class="item">
+            <img src="../static/images/icon.jpg" th:src="@{/images/icon.jpg}"  class="ui rounded image" alt="" style="width: 110px">
+          </div>
+        </div>
+      </div>
+      <div class="three wide column">
+        <h4 class="ui inverted header m-text-thin m-text-spaced " >Newest</h4>
+        <div class="ui inverted link list">
+          <a href="#" class="item m-text-thin">User Story</a>
+          <a href="#" class="item m-text-thin">User Story</a>
+          <a href="#" class="item m-text-thin">User Story</a>
+        </div>
+      </div>
+      <div class="three wide column">
+        <h4 class="ui inverted header m-text-thin m-text-spaced " >Contact</h4>
+        <div class="ui inverted link list">
+          <a href="#" class="item m-text-thin">Email</a>
+          <a href="#" class="item m-text-thin">LinkedIn</a>
+          <a href="#" class="item m-text-thin">Github</a>
+        </div>
+      </div>
+      <div class="seven wide column">
+        <h4 class="ui inverted header m-text-thin m-text-spaced">About Me</h4>
+        <div class="ui inverted link list">
+          <p class="m-text-thin m-text-spaced m-opacity-mini">Lol...</p>
+        </div>
+      </div>
+    </div>
+    <div class="ui inverted section divider"></div>
+    <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright © </p>
+  </div>
+
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
 </body>
 </html>
