--- a/static/index.html
+++ b/static/index.html
@@ -28,22 +28,198 @@
   </div>
 </nav>
 
-<!--    Content    -->
-<div>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
+<!--    Middle Content    -->
+<div class="m-container m-padded-tb-big">
+  <div class="ui container">
+    <div class="ui stackable grid">
+      <!-- left -->
+      <div class="eleven wide column">
+        <!-- header -->
+        <div class="ui top attached segment">
+          <div class="ui middle aligned two column grid">
+            <div class="column">
+              <h3 class="ui teal header">Blog</h3>
+            </div>
+            <div class="right aligned column">
+              Total: <h2 class="ui orange header m-inline-block m-text-thin" th:text="${page.totalElements}"> 14 </h2> blogs
+            </div>
+          </div>
+        </div>
 
+        <!-- content -->
+        <div class="ui attached segment">
+          <div class="ui padded vertical segment m-padded-tb-large">
+            <div class="ui middle aligned mobile reversed stackable grid" th:each="blog : ${page.content}" >
+              <div class="eleven wide column">
+                <h3 class="ui header">啊这。。你真的理解什么是财富自由吗</h3>
+                <p>风神了封神了，入魔了，魔怔了，正确做好任何一件事情的前提是清晰、正确的理解目标。而事实是，我们很多人很多时候根本没有对目标正确的定义，甚至根本从来就没有想过，只是大家都那么做而已…...</p>
+                <div class="ui grid">
+                  <div class="eleven wide column">
+                    <div class="ui mini horizontal link list">
+                      <div class="item">
+                        <img src="../static/images/icon.jpg" alt="" class="ui avatar image">
+                      </div>
+                      <div class="item">
+                        <div class="content">
+                          <a href="#" class="header" th:text="${blog.user.nickname}">汪峰</a>
+                        </div>
+                      </div>
+                      <div class="item">
+                        <i class="calendar icon"></i> 2020-04-01
+                      </div>
+                      <div class="item">
+                        <i class="eye icon"></i> 6324
+                      </div>
+                    </div>
+                  </div>
+                  <div class="right aligned five wide column">
+                    <a href="#" target="_blank" class="ui teal label basic m-padded-tiny m-text-thin" th:text="${blog.type.name}">
+                      烈马人
+                    </a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="five wide column">
+                <a href="#" target="_blank"><img src="https://picsum.photos/id/1049/800/400" alt="" class="ui rounded image"></a>
+
+              </div>
+            </div>
+          </div>
+          <div class="ui padded vertical segment m-padded-tb-large">
+            <div class="ui middle aligned mobile reversed stackable grid" th:each="blog : ${page.content}" >
+              <div class="eleven wide column">
+                <h3 class="ui header">啊这。。你真的理解什么是财富自由吗</h3>
+                <p>风神了封神了，入魔了，魔怔了，正确做好任何一件事情的前提是清晰、正确的理解目标。而事实是，我们很多人很多时候根本没有对目标正确的定义，甚至根本从来就没有想过，只是大家都那么做而已…...</p>
+                <div class="ui grid">
+                  <div class="eleven wide column">
+                    <div class="ui mini horizontal link list">
+                      <div class="item">
+                        <img src="../static/images/icon.jpg" alt="" class="ui avatar image">
+                      </div>
+                      <div class="item">
+                        <div class="content">
+                          <a href="#" class="header" th:text="${blog.user.nickname}">汪峰</a>
+                        </div>
+                      </div>
+                      <div class="item">
+                        <i class="calendar icon"></i> 2020-04-01
+                      </div>
+                      <div class="item">
+                        <i class="eye icon"></i> 6324
+                      </div>
+                    </div>
+                  </div>
+                  <div class="right aligned five wide column">
+                    <a href="#" target="_blank" class="ui teal label basic m-padded-tiny m-text-thin" th:text="${blog.type.name}">
+                      烈马人
+                    </a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="five wide column">
+                <a href="#" target="_blank"><img src="https://picsum.photos/id/1049/800/400" alt="" class="ui rounded image"></a>
+
+              </div>
+            </div>
+          </div>
+          <div class="ui padded vertical segment m-padded-tb-large">
+            <div class="ui middle aligned mobile reversed stackable grid" th:each="blog : ${page.content}" >
+              <div class="eleven wide column">
+                <h3 class="ui header">啊这。。你真的理解什么是财富自由吗</h3>
+                <p>风神了封神了，入魔了，魔怔了，正确做好任何一件事情的前提是清晰、正确的理解目标。而事实是，我们很多人很多时候根本没有对目标正确的定义，甚至根本从来就没有想过，只是大家都那么做而已…...</p>
+                <div class="ui grid">
+                  <div class="eleven wide column">
+                    <div class="ui mini horizontal link list">
+                      <div class="item">
+                        <img src="../static/images/icon.jpg" alt="" class="ui avatar image">
+                      </div>
+                      <div class="item">
+                        <div class="content">
+                          <a href="#" class="header" th:text="${blog.user.nickname}">汪峰</a>
+                        </div>
+                      </div>
+                      <div class="item">
+                        <i class="calendar icon"></i> 2020-04-01
+                      </div>
+                      <div class="item">
+                        <i class="eye icon"></i> 6324
+                      </div>
+                    </div>
+                  </div>
+                  <div class="right aligned five wide column">
+                    <a href="#" target="_blank" class="ui teal label basic m-padded-tiny m-text-thin" th:text="${blog.type.name}">
+                      烈马人
+                    </a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="five wide column">
+                <a href="#" target="_blank"><img src="https://picsum.photos/id/1049/800/400" alt="" class="ui rounded image"></a>
+
+              </div>
+            </div>
+          </div>
+          <div class="ui padded vertical segment m-padded-tb-large">
+            <div class="ui middle aligned mobile reversed stackable grid" th:each="blog : ${page.content}" >
+              <div class="eleven wide column">
+                <h3 class="ui header">啊这。。你真的理解什么是财富自由吗</h3>
+                <p>风神了封神了，入魔了，魔怔了，正确做好任何一件事情的前提是清晰、正确的理解目标。而事实是，我们很多人很多时候根本没有对目标正确的定义，甚至根本从来就没有想过，只是大家都那么做而已…...</p>
+                <div class="ui grid">
+                  <div class="eleven wide column">
+                    <div class="ui mini horizontal link list">
+                      <div class="item">
+                        <img src="../static/images/icon.jpg" alt="" class="ui avatar image">
+                      </div>
+                      <div class="item">
+                        <div class="content">
+                          <a href="#" class="header" th:text="${blog.user.nickname}">汪峰</a>
+                        </div>
+                      </div>
+                      <div class="item">
+                        <i class="calendar icon"></i> 2020-04-01
+                      </div>
+                      <div class="item">
+                        <i class="eye icon"></i> 6324
+                      </div>
+                    </div>
+                  </div>
+                  <div class="right aligned five wide column">
+                    <a href="#" target="_blank" class="ui teal label basic m-padded-tiny m-text-thin" th:text="${blog.type.name}">
+                      烈马人
+                    </a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="five wide column">
+                <a href="#" target="_blank"><img src="https://picsum.photos/id/1049/800/400" alt="" class="ui rounded image"></a>
+
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- bottom -->
+        <div class="ui bottom attached segment">
+          <div class="ui middle aligned two column grid">
+            <div class="column">
+              <a href="#" class="ui mini teal basic button">Prev Page</a>
+            </div>
+            <div class="right aligned column">
+              <a href="#" class="ui mini teal basic button">Next Page</a>            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- right -->
+      <div class="five wide column">
+
+      </div>
+    </div>
+  </div>
 </div>
 
 
@@ -84,9 +260,7 @@
     <div class="ui inverted section divider"></div>
     <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright © </p>
   </div>
-
 </footer>
-
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
 </body>
