--- a/static/index.html
+++ b/static/index.html
@@ -9,23 +9,26 @@
 
 </head>
 <body>
-<!--    navigation   -->
-<nav class="ui inverted attached segment m-padding-tb-mini">
+<nav th:replace="_fragments :: menu(1)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
   <div class="ui container">
-    <div class="ui inverted secondary menu">
+    <div class="ui inverted secondary stackable menu">
       <h2 class="ui teal header item">Blog</h2>
-      <a href="#" class=" item"><i class="mini home icon"></i>Home</a>
-      <a href="#" class=" item"><i class="mini idea icon"></i>Types</a>
-      <a href="#" class=" item"><i class="mini tags icon"></i>Tags</a>
-      <a href="#" class=" item"><i class="mini info icon"></i>About Me</a>
-      <div class="right item">
-        <div class="ui icon inverted transparent input">
-          <input type="text" placeholder="Search...">
+      <a href="#" class=" m-item item m-mobile-hide"><i class="mini home icon"></i>Home</a>
+      <a href="#" class="m-item item m-mobile-hide"><i class="mini idea icon"></i>Types</a>
+      <a href="#" class="m-item item m-mobile-hide"><i class="mini tags icon"></i>Tags</a>
+      <a href="#" class="m-item item m-mobile-hide"><i class="mini clone icon"></i>Archive</a>
+      <a href="#" class="m-item item m-mobile-hide"><i class="mini info icon"></i>About Me</a>
+      <div class="right m-item item m-mobile-hide">
+        <div class="ui icon inverted transparent input m-margin-tb-tiny">
+          <input type="text" placeholder="Search....">
           <i class="search link icon"></i>
         </div>
       </div>
     </div>
   </div>
+  <a href="#" class="ui menu toggle black icon button m-right-top m-mobile-show">
+    <i class="sidebar icon"></i>
+  </a>
 </nav>
 
 <!--    Middle Content    -->
@@ -52,12 +55,12 @@
             <div class="ui middle aligned mobile reversed stackable grid" th:each="blog : ${page.content}" >
               <div class="eleven wide column">
                 <h3 class="ui header">啊这。。你真的理解什么是财富自由吗</h3>
-                <p>风神了封神了，入魔了，魔怔了，正确做好任何一件事情的前提是清晰、正确的理解目标。而事实是，我们很多人很多时候根本没有对目标正确的定义，甚至根本从来就没有想过，只是大家都那么做而已…...</p>
+                <p class="m-text" th:text="|${blog.description}......|">风神了封神了，入魔了，魔怔了，正确做好任何一件事情的前提是清晰、正确的理解目标。而事实是，我们很多人很多时候根本没有对目标正确的定义，甚至根本从来就没有想过，只是大家都那么做而已…...</p>
                 <div class="ui grid">
                   <div class="eleven wide column">
                     <div class="ui mini horizontal link list">
                       <div class="item">
-                        <img src="../static/images/icon.jpg" alt="" class="ui avatar image">
+                        <img src="../static/images/icon.png" alt="" class="ui avatar image">
                       </div>
                       <div class="item">
                         <div class="content">
@@ -90,12 +93,12 @@
             <div class="ui middle aligned mobile reversed stackable grid" th:each="blog : ${page.content}" >
               <div class="eleven wide column">
                 <h3 class="ui header">啊这。。你真的理解什么是财富自由吗</h3>
-                <p>风神了封神了，入魔了，魔怔了，正确做好任何一件事情的前提是清晰、正确的理解目标。而事实是，我们很多人很多时候根本没有对目标正确的定义，甚至根本从来就没有想过，只是大家都那么做而已…...</p>
+                <p class="m-text" th:text="|${blog.description}......|">风神了封神了，入魔了，魔怔了，正确做好任何一件事情的前提是清晰、正确的理解目标。而事实是，我们很多人很多时候根本没有对目标正确的定义，甚至根本从来就没有想过，只是大家都那么做而已…...</p>
                 <div class="ui grid">
                   <div class="eleven wide column">
                     <div class="ui mini horizontal link list">
                       <div class="item">
-                        <img src="../static/images/icon.jpg" alt="" class="ui avatar image">
+                        <img src="../static/images/icon.png" alt="" class="ui avatar image">
                       </div>
                       <div class="item">
                         <div class="content">
@@ -125,81 +128,81 @@
             </div>
           </div>
           <div class="ui padded vertical segment m-padded-tb-large">
-            <div class="ui middle aligned mobile reversed stackable grid" th:each="blog : ${page.content}" >
-              <div class="eleven wide column">
-                <h3 class="ui header">啊这。。你真的理解什么是财富自由吗</h3>
-                <p>风神了封神了，入魔了，魔怔了，正确做好任何一件事情的前提是清晰、正确的理解目标。而事实是，我们很多人很多时候根本没有对目标正确的定义，甚至根本从来就没有想过，只是大家都那么做而已…...</p>
-                <div class="ui grid">
-                  <div class="eleven wide column">
-                    <div class="ui mini horizontal link list">
-                      <div class="item">
-                        <img src="../static/images/icon.jpg" alt="" class="ui avatar image">
-                      </div>
-                      <div class="item">
-                        <div class="content">
-                          <a href="#" class="header" th:text="${blog.user.nickname}">汪峰</a>
-                        </div>
-                      </div>
-                      <div class="item">
-                        <i class="calendar icon"></i> 2020-04-01
-                      </div>
-                      <div class="item">
-                        <i class="eye icon"></i> 6324
+          <div class="ui middle aligned mobile reversed stackable grid" th:each="blog : ${page.content}" >
+            <div class="eleven wide column">
+              <h3 class="ui header">啊这。。你真的理解什么是财富自由吗</h3>
+              <p class="m-text" th:text="|${blog.description}......|">风神了封神了，入魔了，魔怔了，正确做好任何一件事情的前提是清晰、正确的理解目标。而事实是，我们很多人很多时候根本没有对目标正确的定义，甚至根本从来就没有想过，只是大家都那么做而已…...</p>
+              <div class="ui grid">
+                <div class="eleven wide column">
+                  <div class="ui mini horizontal link list">
+                    <div class="item">
+                      <img src="../static/images/icon.png" alt="" class="ui avatar image">
+                    </div>
+                    <div class="item">
+                      <div class="content">
+                        <a href="#" class="header" th:text="${blog.user.nickname}">汪峰</a>
                       </div>
                     </div>
-                  </div>
-                  <div class="right aligned five wide column">
-                    <a href="#" target="_blank" class="ui teal label basic m-padded-tiny m-text-thin" th:text="${blog.type.name}">
-                      烈马人
-                    </a>
+                    <div class="item">
+                      <i class="calendar icon"></i> 2020-04-01
+                    </div>
+                    <div class="item">
+                      <i class="eye icon"></i> 6324
+                    </div>
                   </div>
                 </div>
-              </div>
-
-              <div class="five wide column">
-                <a href="#" target="_blank"><img src="https://picsum.photos/id/1049/800/400" alt="" class="ui rounded image"></a>
-
+                <div class="right aligned five wide column">
+                  <a href="#" target="_blank" class="ui teal label basic m-padded-tiny m-text-thin" th:text="${blog.type.name}">
+                    烈马人
+                  </a>
+                </div>
               </div>
             </div>
+
+            <div class="five wide column">
+              <a href="#" target="_blank"><img src="https://picsum.photos/id/1049/800/400" alt="" class="ui rounded image"></a>
+
+            </div>
           </div>
+        </div>
           <div class="ui padded vertical segment m-padded-tb-large">
-            <div class="ui middle aligned mobile reversed stackable grid" th:each="blog : ${page.content}" >
-              <div class="eleven wide column">
-                <h3 class="ui header">啊这。。你真的理解什么是财富自由吗</h3>
-                <p>风神了封神了，入魔了，魔怔了，正确做好任何一件事情的前提是清晰、正确的理解目标。而事实是，我们很多人很多时候根本没有对目标正确的定义，甚至根本从来就没有想过，只是大家都那么做而已…...</p>
-                <div class="ui grid">
-                  <div class="eleven wide column">
-                    <div class="ui mini horizontal link list">
-                      <div class="item">
-                        <img src="../static/images/icon.jpg" alt="" class="ui avatar image">
-                      </div>
-                      <div class="item">
-                        <div class="content">
-                          <a href="#" class="header" th:text="${blog.user.nickname}">汪峰</a>
-                        </div>
-                      </div>
-                      <div class="item">
-                        <i class="calendar icon"></i> 2020-04-01
-                      </div>
-                      <div class="item">
-                        <i class="eye icon"></i> 6324
+          <div class="ui middle aligned mobile reversed stackable grid" th:each="blog : ${page.content}" >
+            <div class="eleven wide column">
+              <h3 class="ui header">啊这。。你真的理解什么是财富自由吗</h3>
+              <p class="m-text" th:text="|${blog.description}......|">风神了封神了，入魔了，魔怔了，正确做好任何一件事情的前提是清晰、正确的理解目标。而事实是，我们很多人很多时候根本没有对目标正确的定义，甚至根本从来就没有想过，只是大家都那么做而已…...</p>
+              <div class="ui grid">
+                <div class="eleven wide column">
+                  <div class="ui mini horizontal link list">
+                    <div class="item">
+                      <img src="../static/images/icon.png" alt="" class="ui avatar image">
+                    </div>
+                    <div class="item">
+                      <div class="content">
+                        <a href="#" class="header" th:text="${blog.user.nickname}">汪峰</a>
                       </div>
                     </div>
-                  </div>
-                  <div class="right aligned five wide column">
-                    <a href="#" target="_blank" class="ui teal label basic m-padded-tiny m-text-thin" th:text="${blog.type.name}">
-                      烈马人
-                    </a>
+                    <div class="item">
+                      <i class="calendar icon"></i> 2020-04-01
+                    </div>
+                    <div class="item">
+                      <i class="eye icon"></i> 6324
+                    </div>
                   </div>
                 </div>
-              </div>
-
-              <div class="five wide column">
-                <a href="#" target="_blank"><img src="https://picsum.photos/id/1049/800/400" alt="" class="ui rounded image"></a>
-
+                <div class="right aligned five wide column">
+                  <a href="#" target="_blank" class="ui teal label basic m-padded-tiny m-text-thin" th:text="${blog.type.name}">
+                    烈马人
+                  </a>
+                </div>
               </div>
             </div>
+
+            <div class="five wide column">
+              <a href="#" target="_blank"><img src="https://picsum.photos/id/1049/800/400" alt="" class="ui rounded image"></a>
+
+            </div>
           </div>
+        </div>
         </div>
 
         <!-- bottom -->
@@ -216,11 +219,119 @@
 
       <!-- right -->
       <div class="five wide column">
+        <!-- Types -->
+        <div class="ui segments">
+          <div class="ui secondary segment">
+            <div class="ui two column grid">
+              <div class="column"><i class="idea icon"></i>Types</div>
+              <div class="right aligned column">
+                <a href="#" th:href="@{types/-1}" target="_blank">more <i class="angle double right icon"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="ui teal segment">
+            <div class="ui fluid vertical menu">
+              <a href="#" class="item">
+                study log
+                <div class="ui teal basic left pointing label">99</div>
+              </a>
+              <a href="#" class="item">
+                study log
+                <div class="ui teal basic left pointing label">99</div>
+              </a>
+              <a href="#" class="item">
+                study log
+                <div class="ui teal basic left pointing label">99</div>
+              </a>
+              <a href="#" class="item">
+                study log
+                <div class="ui teal basic left pointing label">99</div>
+              </a>
+              <a href="#" class="item">
+                study log
+                <div class="ui teal basic left pointing label">99</div>
+              </a>
+              <a href="#" class="item">
+                study log
+                <div class="ui teal basic left pointing label">99</div>
+              </a>
 
+            </div>
+          </div>
+        </div>
+
+        <!-- Tags -->
+        <div class="ui segments m-margin-top-large">
+          <div class="ui secondary segment">
+            <div class="ui two column grid">
+              <div class="column"><i class="tags icon"></i>Tags</div>
+              <div class="right aligned column">
+                <a href="#" th:href="@{types/-1}" target="_blank">more <i class="angle double right icon"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="ui teal segment">
+            <a href="#" target="_blank" class="ui teal basic left pointing label m-margin-tb-tiny">
+              Java <div class="detail">99</div>
+            </a>
+            <a href="#" target="_blank" class="ui teal basic left pointing label m-margin-tb-tiny">
+              c <div class="detail">99</div>
+            </a>
+            <a href="#" target="_blank" class="ui teal basic left pointing label m-margin-tb-tiny">
+              C <div class="detail">99</div>
+            </a>
+            <a href="#" target="_blank" class="ui teal basic left pointing label m-margin-tb-tiny">
+              c <div class="detail">99</div>
+            </a>
+            <a href="#" target="_blank" class="ui teal basic left pointing label m-margin-tb-tiny">
+              c <div class="detail">99</div>
+            </a>
+            <a href="#" target="_blank" class="ui teal basic left pointing label m-margin-tb-tiny">
+              Java <div class="detail">99</div>
+            </a>
+            <a href="#" target="_blank" class="ui teal basic left pointing label m-margin-tb-tiny">
+              Java <div class="detail">99</div>
+            </a>
+            <a href="#" target="_blank" class="ui teal basic left pointing label m-margin-tb-tiny">
+              Java <div class="detail">99</div>
+            </a>
+            <a href="#" target="_blank" class="ui teal basic left pointing label m-margin-tb-tiny">
+              Java <div class="detail">99</div>
+            </a>
+          </div>
+        </div>
+
+        <!-- Recommendation -->
+        <div class="ui segments ">
+          <div class="ui secondary segment">
+            <i class="bookmark icon"></i>Recommend
+          </div>
+          <div class="ui segment">
+            <a href="#" th:href="@{/blog/{id}(id=${blog.id})}" target="_blank" class="m-black m-text-thin" th:text="${blog.title}">User Story</a>
+          </div>
+          <div class="ui segment">
+            <a href="#" th:href="@{/blog/{id}(id=${blog.id})}" target="_blank" class="m-black m-text-thin" th:text="${blog.title}">User Dog</a>
+          </div>
+          <div class="ui segment">
+            <a href="#" th:href="@{/blog/{id}(id=${blog.id})}" target="_blank" class="m-black m-text-thin" th:text="${blog.title}">User Cat</a>
+          </div>
+        </div>
+
+        <!-- QRcode -->
+        <h4 class="ui horizontal divider header"> Check out my website </h4>
+        <div class="ui centered card" style="width: 11em">
+          <img src="../static/images/icon.png" th:src="@{/images/icon.png}" alt="" class="ui rounded image" >
+        </div>
       </div>
     </div>
   </div>
 </div>
+
+<br>
+<br>
+<br>
+<br>
+<br>
 
 
 <!--   footer  -->
@@ -230,7 +341,7 @@
       <div class="three wide column">
         <div class="ui inverted link list">
           <div class="item">
-            <img src="../static/images/icon.jpg" th:src="@{/images/icon.jpg}"  class="ui rounded image" alt="" style="width: 110px">
+            <img src="../static/images/icon.png" th:src="@{/images/icon.png}"  class="ui rounded image" alt="" style="width: 110px">
           </div>
         </div>
       </div>
