--- a/static/index.html
+++ b/static/index.html
@@ -13,7 +13,7 @@
   <div class="ui container">
     <div class="ui inverted secondary stackable menu">
       <h2 class="ui teal header item">Blog</h2>
-      <a href="#" class=" m-item item m-mobile-hide"><i class="mini home icon"></i>Home</a>
+      <a href="#" class="m-item item m-mobile-hide"><i class="mini home icon"></i>Home</a>
       <a href="#" class="m-item item m-mobile-hide"><i class="mini idea icon"></i>Types</a>
       <a href="#" class="m-item item m-mobile-hide"><i class="mini tags icon"></i>Tags</a>
       <a href="#" class="m-item item m-mobile-hide"><i class="mini clone icon"></i>Archive</a>
@@ -374,5 +374,11 @@
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
+
+<script>
+    $('.menu.toggle').click(function () {
+        $('.m-item').toggleClass('m-mobile-hide');
+    });
+</script>
 </body>
 </html>
