--- a/static/blog.html
+++ b/static/blog.html
@@ -277,7 +277,7 @@
       <div class="seven wide column">
         <h4 class="ui inverted header m-text-thin m-text-spaced">About Me</h4>
         <div class="ui inverted link list">
-          <p class="m-text-thin m-text-spaced m-opacity-mini">Lol...</p>
+          <p class="m-text-thin m-text-spaced m-opacity-mini">大可不必了解我，看我笑话就好...</p>
         </div>
       </div>
     </div>
