--- a/static/index.html
+++ b/static/index.html
@@ -13,7 +13,7 @@
   <div class="ui container">
     <div class="ui inverted secondary stackable menu">
       <h2 class="ui teal header item">Blog</h2>
-      <a href="#" class="m-item item m-mobile-hide"><i class="mini home icon"></i>Home</a>
+      <a href="#" class="active m-item item m-mobile-hide"><i class="mini home icon"></i>Home</a>
       <a href="#" class="m-item item m-mobile-hide"><i class="mini idea icon"></i>Types</a>
       <a href="#" class="m-item item m-mobile-hide"><i class="mini tags icon"></i>Tags</a>
       <a href="#" class="m-item item m-mobile-hide"><i class="mini clone icon"></i>Archive</a>
@@ -364,7 +364,7 @@
       <div class="seven wide column">
         <h4 class="ui inverted header m-text-thin m-text-spaced">About Me</h4>
         <div class="ui inverted link list">
-          <p class="m-text-thin m-text-spaced m-opacity-mini">Lol...</p>
+          <p class="m-text-thin m-text-spaced m-opacity-mini">大可不必了解我，看我笑话就好...</p>
         </div>
       </div>
     </div>
