--- a/blog.html
+++ b/blog.html
@@ -586,7 +586,7 @@ h5,h6{font-size:1em;}
     <a href="#comment-container" class="ui icon button" ><i class="comment icon"></i></a>
     <button class="ui github icon button" data-content="adanthony53" data-position="left center"><i class="github icon"></i></button>
     <button class="ui wechat icon button"><i class="wechat icon"></i></button>
-    <a href="#" class="ui icon button" ><i class="chevron up icon"></i></a>
+    <a href="#" id="toTop-button" class="ui icon button" ><i class="chevron up icon"></i></a>
   </div>
 </div>
 
@@ -597,8 +597,8 @@ h5,h6{font-size:1em;}
   </ol>
 </div>
 
-<div class="ui wechat-qr flowing popup transition hidden" style="width: 110px">
-  <img src="./static/images/wechat.png" alt="" class="ui rounded image" style="width: 110px">
+<div id="qrcode" class="ui wechat-qr flowing popup transition hidden" style="width: 110px">
+<!--  <img src="./static/images/wechat.png" alt="" class="ui rounded image" style="width: 110px">-->
 </div>
 
 <br>
@@ -651,6 +651,8 @@ h5,h6{font-size:1em;}
 
 <script src="static/lib/prism/prism.js"></script>
 <script src="static/lib/tocbot/tocbot.min.js"></script>
+<script src="static/lib/qrcode/qrcode.min.js"></script>
+<script src="//cdn.jsdelivr.net/npm/jquery.scrollto@2.1.2/jquery.scrollTo.min.js"></script>
 
 <script>
     $('.menu.toggle').click(function () {
@@ -687,6 +689,22 @@ h5,h6{font-size:1em;}
         popup : $('.wechat-qr.popup'),
         on : 'click',
         position: 'left center'
+    });
+
+    var serurl = /*[[#{blog.serurl}]]*/"127.0.0.1:8080";
+    var url = /*[[@{/blog/{id}(id=${blog.id})}]]*/"";
+    var qrcode = new QRCode("qrcode", {
+        // text: serurl+url,
+        text: "https://github.com/adanthony53",
+        width: 100,
+        height: 100,
+        colorDark : "#000000",
+        colorLight : "#ffffff",
+        correctLevel : QRCode.CorrectLevel.H
+    });
+
+    $('#toTop-button').click(function () {
+        $(window).scrollTo(0,500);
     });
 </script>
 </body>
